--- a/mybatis-puls/src/main/resources/templates/userInfo.html
+++ b/mybatis-puls/src/main/resources/templates/userInfo.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>User</h1>
-<p>用户对象是否为空：${user == null}</p>
-<p>ID: ${user?.id}</p>
-<p>Name: ${user?.name}</p>
-<p>Email: ${user?.email}</p>
+<p>用户对象是否为空：${users == null}</p>
+<p>ID: ${users?.id}</p>
+<p>Name: ${users?.name}</p>
+<p>Email: ${users?.email}</p>
 </body>
 </html>
